--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -71,6 +71,11 @@ body
     background-color: #ebd1ab;
 }
 
+*
+{
+    outline: none;
+}
+
 button
 {
     border: none; 
@@ -138,9 +143,6 @@ img
 
     width: 290px;
     height: 200px;
-
-    opacity: .3; 
-    background-color: #5100d3;
 }
 
 .hint
@@ -178,9 +180,6 @@ img
 .go-to-slide
 {
     position: absolute;
-
-    opacity: .3; 
-    background-color: #5100d3;
 }
 .go-to-slide--list
 {
